src/components/MyAccountPage/MyAccountPage.css
.myAccountPageCss {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  text-align: center;
  row-gap: 30px;
}

.accountPageFormArea {
  height: auto;
  width: 500px;
  border: 1px solid black;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
  border-radius: 5px;
  margin-top: 50px;
}

.accountPageFormArea section,
.accountPageFormArea p {
  font-size: 28px;
  align-items: center;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  column-gap: 15px;
  margin-top: 15px;
  margin-bottom: 15px;
}

.accountPageForm p {
  font-size: 13.5px;
  padding: 0px;
  margin: 0px;
  color: #d3302f;
}

.editInfoButton {
  position: relative;
  top: -81%;
  right: -45%;
}

.invalidHeader {
  /* position: relative; */
  /* top: -171%; */
  /* right: 25%; */
  /* padding: 0px;
  margin: 0px; */
  /* margin-top: -35px; */
  color: #d3302f;
}

.nameErrorText {
  /* position: absolute; */
  padding: 0px;
  margin: 0px;
  /* top: 21.5%;
  right: 31.7%; */
  color: #d3302f;
  font-size: 15px;
}

.emailErrorText {
  /* position: absolute; */
  padding: 0px;
  margin: 0px;
  /* top: 31.5%;
  right: 31.7%; */
  color: #d3302f;
  font-size: 15px;
}

.passwordErrorText {
  /* position: absolute; */
  padding: 0px;
  margin: 0px;
  /* top: 47%;
  right: 27%; */
  color: #d3302f;
  font-size: 15px;
}

